Proper project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(redis_vtbl)
 
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
+ENABLE_TESTING()
+IF(NOT TARGET check)
+	ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND})
+ENDIF()
 
-#INCLUDE_DIRECTORIES()
-ADD_LIBRARY(redis_vtbl SHARED redis_vtbl.c list.c vector.c address.c)
-TARGET_LINK_LIBRARIES(redis_vtbl hiredis)
-
-ADD_EXECUTABLE(driver driver.c)
-TARGET_LINK_LIBRARIES(driver sqlite3)
+ADD_SUBDIRECTORY(src)
+ADD_SUBDIRECTORY(test)
