Fix vector and list
Correct type error leading to zero growth, and type in vector impl which
left void** when void* was intended.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,5 @@ SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
 
 #INCLUDE_DIRECTORIES()
 ADD_LIBRARY(redis_vtbl SHARED redis_vtbl.c list.c vector.c address.c)
-TARGET_LINK_LIBRARIES(redis_vtbl hiredis)
+TARGET_LINK_LIBRARIES(redis_vtbl hiredis m)
 
