--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,22 @@
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
 
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -g3 -O0")
+
+MACRO(REGISTER_TEST testname)
+	SET_TARGET_PROPERTIES(${testname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+	ADD_TEST(${testname} "${MAKE_CURRENT_BINARY_DIR}/${testname}")
+	ADD_DEPENDENCIES(check ${testname})
+ENDMACRO()
+
 ADD_EXECUTABLE(driver EXCLUDE_FROM_ALL driver.c)
 TARGET_LINK_LIBRARIES(driver sqlite3)
-ADD_TEST(driver driver)
-ADD_DEPENDENCIES(check driver)
+REGISTER_TEST(driver)
 
+ADD_EXECUTABLE(test_vector EXCLUDE_FROM_ALL test_vector.c ${PROJECT_SOURCE_DIR}/src/vector.c)
+TARGET_LINK_LIBRARIES(test_vector m)
+REGISTER_TEST(test_vector)
+
+ADD_EXECUTABLE(test_list EXCLUDE_FROM_ALL test_list.c ${PROJECT_SOURCE_DIR}/src/list.c)
+TARGET_LINK_LIBRARIES(test_list m)
+REGISTER_TEST(test_list)
